# PixelPalette

./: .cursorignore  .cursorrules  .env.example  .gitignore  README.md  pyproject.toml
.notes/: directory_structure.md  project_overview.md  task_list.md
app/: package-lock.json  package.json
app/flask/: main.py
app/src/routes/: +page.svelte
